# LightWeight-Event-System

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  Main.cpp  RAIIPatternExample.cpp
include/EventCore/: Event.hpp  EventDispatcher.hpp  EventId.hpp
src/: EventDispatcher.cpp
tests/: CMakeLists.txt
